Fri Jan  9 13:20:08 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: rescue abnormal Encoding.locale_charmap value.

Fri Jan  9 12:29:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (test-sample), rubytest.rb: use runruby.rb

Fri Jan  9 10:40:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_process.rb (TestProcess::MANDATORY_ENVS): some
	  platforms need environments for shared objects.

Thu Jan  8 23:19:38 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (bsock_shutdown): accept symbol/string as how.
	  (shutdown_how_arg): new function.

	* ext/socket/mkconstants.rb: generate shutdown_how_to_int.

Thu Jan  8 23:16:37 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* instruby.rb: easy code contains fewer bugs.

Thu Jan  8 22:59:30 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb (gen_name_to_int_func): generate
	  name_to_int functions, not only body.

Thu Jan  8 22:44:10 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c: don't use AI_NUMERICSERV for platforms which
	  not define it as old Windows.
	  [ruby-dev:37736]

Thu Jan  8 17:32:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb: should not depend on a library which does not exist
	  in 1.8.

Thu Jan  8 07:52:55 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (init_unix_addrinfo): don't return a value.

Thu Jan  8 07:30:52 2009  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (OpenURI.redirectable?): reverted https redirection.

Thu Jan  8 00:31:58 2009  Tanaka Akira  <akr@fsij.org>

	* lib/test/unit/assertions.rb (assert_no_match): don't count up as two
	  assertions.

Thu Jan  8 00:26:35 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (addrinfo_getnameinfo): use NI_DGRAM if socktype
	  is SOCK_DGRAM.

Thu Jan  8 00:16:22 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (host_str): add flags_ptr argument to specify
	  AI_NUMERICHOST if host is numeric form.